<?xml version="1.0" encoding="utf-8"?>
<!--
** Copyright 2013 two forty four a.m. LLC <http://www.twofortyfouram.com>
**
** Licensed under the Apache License, Version 2.0 (the "License");
** you may not use this file except in compliance with the License.
** You may obtain a copy of the License at <http://www.apache.org/licenses/LICENSE-2.0>
**
** Unless required by applicable law or agreed to in writing, software
** distributed under the License is distributed on an "AS IS" BASIS,
** WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
** See the License for the specific language governing permissions and
** limitations under the License.
-->
<resources>

    <!-- App name -->
    <string name="app_name">MQTT Publisher</string>

    <!-- Name of the plug-in that appears in Locale -->
    <string name="plugin_name">MQTT Publisher</string>

    <!-- Hint text in the toast edit text -->
    <string name="setting_name">MQTT Settings</string>
    <string name="message_hint">MQTT Message Settings</string>
    <string name="broker_ip_hint">Server Address</string>
    <string name="broker_port_hint">Port</string>
    <string name="client_id_hint">Client ID</string>
    <string name="ssl_hint">SSL/TLS</string>
    <string name="ssl_ignore_cert_hint">Skip SSL verification</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="message_topic_hint">Topic</string>
    <string name="message_payload_hint">Payload</string>
    <string name="btn_accept">Accept</string>
    <string name="action_settings">Action Settings</string>
    <string name="retain_flag">Retain Flag</string>
    

</resources>