<?xml version="1.0" encoding="utf-8"?>
<!--
** Copyright 2013 two forty four a.m. LLC <http://www.twofortyfouram.com>
**
** Licensed under the Apache License, Version 2.0 (the "License");
** you may not use this file except in compliance with the License.
** You may obtain a copy of the License at <http://www.apache.org/licenses/LICENSE-2.0>
**
** Unless required by applicable law or agreed to in writing, software
** distributed under the License is distributed on an "AS IS" BASIS,
** WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
** See the License for the specific language governing permissions and
** limitations under the License.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/broker_ip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="6dip"
        android:layout_marginRight="6dip"
        android:layout_marginTop="8dip"
        android:hint="@string/broker_ip_hint" />
    
    <EditText
        android:id="@+id/broker_port"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="6dip"
        android:layout_marginRight="6dip"
        android:layout_marginTop="8dip"
        android:hint="@string/broker_port_hint" />
    
    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="6dip"
        android:layout_marginRight="6dip"
        android:layout_marginTop="8dip"
        android:hint="@string/username_hint" />
    
    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="6dip"
        android:layout_marginRight="6dip"
        android:layout_marginTop="8dip"
        android:inputType="textPassword"
        android:hint="@string/password_hint" />
    
    <EditText
        android:id="@+id/message_topic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="6dip"
        android:layout_marginRight="6dip"
        android:layout_marginTop="8dip"
        android:hint="@string/message_topic_hint" />
    
    <EditText
        android:id="@+id/message_payload"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="6dip"
        android:layout_marginRight="6dip"
        android:layout_marginTop="8dip"
        android:hint="@string/message_payload_hint" />

    <Button
        android:id="@+id/btn_accept"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="finishActivity"
        android:text="@string/btn_accept" />

</LinearLayout>